--- a/CelestialLiberty/CelestialLiberty.csproj
+++ b/CelestialLiberty/CelestialLiberty.csproj
@@ -54,6 +54,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rival.cs" />
+    <EmbeddedResource Include="CelestialLiberty.resx">
+      <DependentUpon>CelestialLiberty.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
