--- a/CelestialLiberty/CelestialLiberty.csproj
+++ b/CelestialLiberty/CelestialLiberty.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rival.cs" />
+    <Compile Include="Serpent.cs" />
     <EmbeddedResource Include="CelestialLiberty.resx">
       <DependentUpon>CelestialLiberty.cs</DependentUpon>
     </EmbeddedResource>
