--- a/CelestialLiberty/CelestialLiberty.csproj
+++ b/CelestialLiberty/CelestialLiberty.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CelestialLiberty.Designer.cs">
       <DependentUpon>CelestialLiberty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Missile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rival.cs" />
